--- a/App01_ControleXF/App01_ControleXF/Master/Master.xaml
+++ b/App01_ControleXF/App01_ControleXF/Master/Master.xaml
@@ -17,7 +17,7 @@
                 <Button x:Name="btnPickerPage" Text="Picker" Clicked="btnPickerPage_Click" />
                 <Button x:Name="btnSearchBarPage" Text="Search Bar" Clicked="btnSearchBarPage_Click" />
                 <Button x:Name="btnSliderStepperPage" Text="Slider/Stepper" Clicked="SliderStepperPage_Click" />
-
+                <Button x:Name="btnSwitchPage" Text="Switch" Clicked="btnSwitchPage_Click" />
                 
 
 
